[gd_scene load_steps=16 format=3 uid="uid://cikowdx8g5fta"]

[ext_resource type="Texture2D" uid="uid://64ptj2lttm10" path="res://assets/textures/ui/panel.png" id="1_jcbcx"]
[ext_resource type="Script" path="res://scenes/ui/main_menu/main_ui.gd" id="1_jv4cg"]
[ext_resource type="PackedScene" uid="uid://beu0o0f1xy3w3" path="res://scenes/ui/main_menu/ranklist_item.tscn" id="2_2mro1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_85eus"]
atlas = ExtResource("1_jcbcx")
region = Rect2(200, 200, 100, 100)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h0rf6"]
texture = SubResource("AtlasTexture_85eus")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bywl2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uhayw"]

[sub_resource type="Animation" id="Animation_lposd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(750, 360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Starter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1000)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PickMapTheme:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1004)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ranklist:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1624)]
}

[sub_resource type="Animation" id="Animation_ix4sr"]
resource_name = "pick_map_theme_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PickMapTheme:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(0, -1004), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_txwlv"]
resource_name = "ranklist_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ranklist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(0, 1624), Vector2(0, 324)]
}

[sub_resource type="Animation" id="Animation_6f2ff"]
resource_name = "settings_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(750, 360), Vector2(350, 360)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_damr1"]
_data = {
"RESET": SubResource("Animation_lposd"),
"pick_map_theme_enter": SubResource("Animation_ix4sr"),
"ranklist_enter": SubResource("Animation_txwlv"),
"settings_enter": SubResource("Animation_6f2ff")
}

[sub_resource type="Animation" id="Animation_eyntu"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Starter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1000)]
}

[sub_resource type="Animation" id="Animation_4r7hg"]
resource_name = "starter_enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Starter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(-400, 1000), Vector2(0, 1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0xurv"]
_data = {
"RESET": SubResource("Animation_eyntu"),
"starter_enter": SubResource("Animation_4r7hg")
}

[node name="MainUi" type="CanvasLayer"]
script = ExtResource("1_jv4cg")

[node name="Mask" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="UnderLayerButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
keep_pressed_outside = true

[node name="TitleLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.0
offset_top = 100.0
offset_right = 296.0
offset_bottom = 245.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 100
text = "机 器 人 快 跑"

[node name="Settings" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 340)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 750.0
offset_top = 360.0
offset_right = 1150.0
offset_bottom = 700.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_h0rf6")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 293.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 50
text = "设置"
horizontal_alignment = 1

[node name="MusicButton" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "音乐：开"
icon_alignment = 2

[node name="SoundButton" type="Button" parent="Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "声效：开"
icon_alignment = 2

[node name="Starter" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 400)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 1000.0
offset_right = 400.0
offset_bottom = 1400.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_h0rf6")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Starter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -145.0
offset_right = 400.0
offset_bottom = 145.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="Starter/VBoxContainer"]
custom_minimum_size = Vector2(320, 90)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "开始游戏"
icon_alignment = 2

[node name="RanklistButton" type="Button" parent="Starter/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "排行榜"
icon_alignment = 2

[node name="SettingsButton" type="Button" parent="Starter/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_vertical = 6
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "设置"
icon_alignment = 2

[node name="Ranklist" type="Panel" parent="."]
custom_minimum_size = Vector2(750, 1300)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 1624.0
offset_right = 750.0
offset_bottom = 2924.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_h0rf6")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Ranklist"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Ranklist/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 50
text = "排行榜"
horizontal_alignment = 1

[node name="1" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2

[node name="2" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 2

[node name="3" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 3

[node name="4" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 4

[node name="5" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 5

[node name="6" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 6

[node name="7" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 7

[node name="8" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 8

[node name="9" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 9

[node name="10" parent="Ranklist/VBoxContainer" instance=ExtResource("2_2mro1")]
layout_mode = 2
rank_number = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Ranklist/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="RankNumberLabel" type="Label" parent="Ranklist/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 32
text = "第1名"

[node name="IdLabel" type="Label" parent="Ranklist/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 32
text = "买辣椒不用券#114514"

[node name="HpLabel" type="Label" parent="Ranklist/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 32
text = "2646"

[node name="PickMapTheme" type="Panel" parent="."]
custom_minimum_size = Vector2(750, 960)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -1004.0
offset_right = 750.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h0rf6")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PickMapTheme"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PickMapTheme/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 50
text = "选择地图主题"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PickMapTheme/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PickMapTheme/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="HSeparator" type="HSeparator" parent="PickMapTheme/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bywl2")

[node name="StartButton" type="Button" parent="PickMapTheme/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "开始"

[node name="HSeparator2" type="HSeparator" parent="PickMapTheme/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_bywl2")

[node name="HSeparator3" type="HSeparator" parent="PickMapTheme/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_uhayw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_damr1")
}

[node name="AnimPlayerForStarter" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0xurv")
}

[connection signal="button_down" from="UnderLayerButton" to="." method="_on_under_layer_button_down"]
[connection signal="button_down" from="Starter/VBoxContainer/PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="button_down" from="Starter/VBoxContainer/RanklistButton" to="." method="_on_ranklist_button_button_down"]
[connection signal="button_down" from="Starter/VBoxContainer/SettingsButton" to="." method="_on_settings_button_button_down"]
[connection signal="button_down" from="PickMapTheme/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
